# poly

./: .gitattributes  .gitignore  .golangci.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .rumdl.toml  .typos.toml  ACTION_USAGE.md  ATTRIBUTIONS.md  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yaml  action.yml  deny.toml  install.ps1  install.sh  poly.toml
.ai-rulez/: config.toml  (+1 more)
crates/conformance/: Cargo.toml  README.md  tools.toml
crates/conformance/corpus/csharp/: Sample.cs
crates/conformance/corpus/dart/: sample.dart
crates/conformance/corpus/elixir/: sample.ex
crates/conformance/corpus/java/: Sample.java
crates/conformance/corpus/php/: sample.php
crates/conformance/corpus/ruby/: sample.rb
crates/conformance/corpus/shell/: sample.sh
crates/conformance/corpus/swift/: Sample.swift
crates/conformance/corpus/zig/: sample.zig
crates/conformance/docker/: csharp.Dockerfile  dart.Dockerfile  elixir.Dockerfile  java.Dockerfile  kotlin.Dockerfile  php.Dockerfile  ruby.Dockerfile  shell.Dockerfile  swift.Dockerfile  zig.Dockerfile
crates/conformance/golden/csharp/: Sample.cs
crates/conformance/golden/dart/: sample.dart
crates/conformance/golden/elixir/: sample.ex
crates/conformance/golden/kotlin/: Sample.kt
crates/conformance/golden/php/: sample.php
crates/conformance/golden/ruby/: sample.rb
crates/conformance/golden/shell/: sample.sh
crates/conformance/golden/swift/: Sample.swift
crates/conformance/golden/zig/: sample.zig
crates/conformance/src/: main.rs
crates/gitfluff/: Cargo.toml
crates/gitfluff/src/: app.rs  cli.rs  config.rs  hooks.rs  lib.rs  lint.rs  lint_tests.rs  main.rs  presets.rs
crates/gitfluff/tests/: cli.rs
crates/poly-cache/: Cargo.toml
crates/poly-cache/src/: lib.rs  maintenance.rs
crates/poly-catalog/: Cargo.toml
crates/poly-catalog/data/: README.md  catalog.json  golden.json
crates/poly-catalog/src/: lib.rs  model.rs  tests.rs
crates/poly-cli/: Cargo.toml
crates/poly-cli/src/: cache_cmd.rs  hooks.rs  lib.rs  main.rs  rules_cmd.rs
crates/poly-cli/src/hooks/: checks.rs  commands.rs  lower.rs  mod.rs  sources.rs  workspace_lint.rs
crates/poly-cli/src/migrate/: deletion.rs  mod.rs  report.rs
crates/poly-cli/tests/: cache_cli.rs  hooks_e2e.rs  migrate.rs
crates/poly-cli/tests/snapshots/: migrate__python_repo_poly_toml.snap
crates/poly-config/: Cargo.toml
crates/poly-config/src/: cache.rs  commit.rs  defaults.rs  hook_sources.rs  hooks.rs  lib.rs  tests.rs  tools.rs  typos_native.rs
crates/poly-config/src/hooks/: builtin.rs  job.rs  mod.rs  patterns.rs  stage.rs  stage_config.rs
crates/poly-hooks/: Cargo.toml
crates/poly-hooks/src/: cleanup.rs  concurrency.rs  filter.rs  fs.rs  git.rs  hook_impl.rs  install.rs  lib.rs  model.rs  process.rs  reporter.rs  runner.rs  snapshot.rs  stage.rs
crates/poly-hooks/src/consts/: env_vars.rs
crates/poly-hooks/src/identify/: mod.rs  tags.rs
crates/poly-hooks/src/pty/: error.rs  mod.rs  sys.rs  types.rs
crates/poly-hooks/tests/: runner.rs
crates/poly-mcp/: Cargo.toml
crates/poly-mcp/src/: lib.rs  ops.rs  server.rs
crates/poly-mcp/tests/: tools.rs
crates/polyfmt/: Cargo.toml
crates/polyfmt/src/: main.rs
crates/polyhooks/: Cargo.toml  NOTICE
crates/polyhooks/src/: config.rs  git.rs  hook.rs  http.rs  lib.rs  main.rs  process.rs  run.rs  schema.rs  settings.rs  store.rs  version.rs  workspace.rs
crates/polyhooks/src/cli/: hook_impl.rs  identify.rs  install.rs  mod.rs  sample_config.rs  try_repo.rs  yaml_to_toml.rs
crates/polyhooks/src/hooks/: meta_hooks.rs  mod.rs
crates/polyhooks/src/identify/: mod.rs  tags.rs
crates/polyhooks/src/languages/: conda.rs  coursier.rs  dart.rs  docker.rs  haskell.rs  lua.rs  mod.rs  perl.rs  r.rs  swift.rs
crates/polyhooks/src/pty/: error.rs  mod.rs  pty.rs  sys.rs
crates/polyhooks/tests/: auto_update.rs  builtin_hooks.rs  cache.rs  hook_impl.rs  install.rs  meta_hooks.rs  run.rs  sample_config.rs  try_repo.rs  validate.rs  workspace.rs  yaml_to_toml.rs
crates/polyhooks/tests/common/: mod.rs
crates/polyhooks/tests/languages/: bun.rs  conda.rs  coursier.rs  deno.rs  docker_image.rs  dotnet.rs  golang.rs  haskell.rs  node.rs  perl.rs  python.rs  r.rs  ruby.rs  rust.rs  script.rs  swift.rs
crates/polylint/: Cargo.toml
crates/polylint-core/: Cargo.toml
crates/polylint-core/benches/: README.md  cache_key.rs  generic_formatter.rs  runner_e2e.rs
crates/polylint-core/benches/support/: profiler.rs
crates/polylint-core/src/: cache.rs  config.rs  defaults.rs  discover.rs  engine.rs  filter.rs  language.rs  lib.rs  registry.rs  report.rs  resolve.rs  runner.rs
crates/polylint-core/src/engines/: biome_common.rs  biome_css.rs  biome_graphql.rs  catalog_tool.rs  dockerfile.rs  graphql.rs  hcl.rs  malva.rs  markup_fmt.rs  mod.rs  native_tool.rs  nixfmt.rs  oxc.rs  r.rs  rubyfmt.rs  ruff.rs  rule_config.rs  rumdl.rs  sqruff.rs  taplo.rs  treesitter.rs  typos.rs  whitespace.rs  yaml.rs
crates/polylint-core/tests/: astgrep.rs  biome_css.rs  biome_graphql.rs  config.rs  config_engines.rs  diagnostic_conformance.rs  discover.rs  dockerfile.rs  graphql.rs  hcl_fixtures.rs  hierarchical_config.rs  mago.rs  malva.rs  markup_fmt_fixtures.rs  native_tool.rs  nixfmt.rs  oxc_fixtures.rs  per_file_ignores.rs  pipeline.rs  r.rs  report.rs  rubyfmt.rs  ruff_engine.rs  rumdl.rs  severity_remap.rs  sqruff.rs  taplo_fixtures.rs  treesitter.rs  typos.rs  version_audit.rs  yaml.rs
crates/polylint-core/tests/snapshots/: biome_css__known_bad_diagnostics.snap  biome_graphql__known_bad_diagnostics.snap  dockerfile__known_bad_diagnostics.snap  graphql__known_bad_diagnostics.snap  graphql__known_unformatted_query_output.snap  graphql__known_unformatted_schema_output.snap  hcl_fixtures__hcl_known_bad_diagnostics.snap  hcl_fixtures__hcl_known_unformatted_output.snap  mago__mago_format_same_line_brace.snap  mago__mago_known_bad_diagnostics.snap  mago__mago_known_unformatted_output.snap  (+59 more)
crates/polylint/src/: main.rs
pip-package/: README.md  pyproject.toml
pip-package/polylint/: __init__.py  cli.py  downloader.py
(+303 files in other folders)
