[workspace]
resolver = "3"
members = [
    "crates/conformance",
    "crates/gitfluff",
    "crates/poly-cache",
    "crates/poly-catalog",
    "crates/poly-cli",
    "crates/poly-config",
    "crates/poly-core",
    "crates/poly-hooks",
    "crates/poly-mcp",
]

[workspace.package]
version = "0.15.2"
edition = "2024"
rust-version = "1.96"
license = "MIT"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
repository = "https://github.com/Goldziher/poly"
homepage = "https://github.com/Goldziher/poly"
documentation = "https://github.com/Goldziher/poly"

[workspace.dependencies]
aho-corasick = "1.1.4"
# alejandra — Nix formatter (UNLICENSE, pure Rust via rnix); chosen over
alejandra = "3.1"
annotate-snippets = "0.12.16"
anstream = "1.0.0"
anstyle-query = "1.1.5"
anyhow = "1"
assert_cmd = "2"
assert_fs = "1.1.4"
ast-grep-config = "0.44.1"
ast-grep-core = "0.44.1"
axoupdater = { version = "0.10.0", default-features = false, features = ["github_releases"] }
biome_analyze = { git = "https://github.com/biomejs/biome", rev = "93d8e5352454bccfbd179db03b3155776599c52c" }
biome_css_analyze = { git = "https://github.com/biomejs/biome", rev = "93d8e5352454bccfbd179db03b3155776599c52c" }
biome_css_parser = { git = "https://github.com/biomejs/biome", rev = "93d8e5352454bccfbd179db03b3155776599c52c" }
biome_diagnostics = { git = "https://github.com/biomejs/biome", rev = "93d8e5352454bccfbd179db03b3155776599c52c" }
biome_graphql_analyze = { git = "https://github.com/biomejs/biome", rev = "93d8e5352454bccfbd179db03b3155776599c52c" }
biome_graphql_parser = { git = "https://github.com/biomejs/biome", rev = "93d8e5352454bccfbd179db03b3155776599c52c" }
biome_languages = { git = "https://github.com/biomejs/biome", rev = "93d8e5352454bccfbd179db03b3155776599c52c", features = [
    "lang_css",
] }
biome_rowan = { git = "https://github.com/biomejs/biome", rev = "93d8e5352454bccfbd179db03b3155776599c52c" }
blake3 = "1"
bstr = "1.12.3"
cargo_metadata = "0.23.1"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4.6.7", features = ["unstable-dynamic"] }
console = { version = "0.16", default-features = false, features = ["ansi-parsing", "std"] }
criterion = "0.8"
ctrlc = "3.5.2"
dockerfile-parser = "0.9.0"
dunce = "1.0.5"
etcetera = "0.11.0"
fancy-regex = "0.18.0"
fs-err = "3.3.1"
fs2 = "0.4"
gitfluff = { path = "crates/gitfluff" }
globset = "0.4.18"
graphql-parser = "0.4"
hcl-edit = "0.9.6"
hcl-rs = "0.19.7"
hex = "0.4.3"
http = "1.4.2"
ignore = "0.4"
indicatif = "0.18.6"
indoc = "2.0.7"
insta = "1"
insta-cmd = "0.7.0"
itertools = "0.15.0"
json5 = "1.3.1"
libc = "0.2.186"
liblzma = { version = "0.4.7", features = ["static"] }
mago-allocator = { version = "=1.42.0" }
mago-database = { version = "=1.42.0" }
mago-formatter = { version = "=1.42.0", features = ["serde"] }
mago-linter = { version = "=1.42.0" }
mago-names = { version = "=1.42.0" }
mago-php-version = { version = "=1.42.0" }
mago-reporting = { version = "=1.42.0" }
mago-span = { version = "=1.42.0" }
mago-syntax = { version = "=1.42.0" }
mago-text-edit = { version = "=1.42.0" }
malva = "0.16"
markdown = "1.0.0"
markup_fmt = "0.27"
memchr = "2.8.2"
owo-colors = { version = "4", features = ["supports-colors"] }
oxc_allocator = { git = "https://github.com/oxc-project/oxc", rev = "24c19a8216c450c7438fd051d0dc96cffcb9e231" }
oxc_diagnostics = { git = "https://github.com/oxc-project/oxc", rev = "24c19a8216c450c7438fd051d0dc96cffcb9e231" }
oxc_formatter = { git = "https://github.com/oxc-project/oxc", rev = "24c19a8216c450c7438fd051d0dc96cffcb9e231" }
oxc_formatter_core = { git = "https://github.com/oxc-project/oxc", rev = "24c19a8216c450c7438fd051d0dc96cffcb9e231" }
oxc_formatter_json = { git = "https://github.com/oxc-project/oxc", rev = "24c19a8216c450c7438fd051d0dc96cffcb9e231" }
oxc_linter = { git = "https://github.com/oxc-project/oxc", rev = "24c19a8216c450c7438fd051d0dc96cffcb9e231" }
oxc_span = { git = "https://github.com/oxc-project/oxc", rev = "24c19a8216c450c7438fd051d0dc96cffcb9e231" }
phf = { version = "0.14.0", default-features = false, features = ["macros"] }
poly-cache = { path = "crates/poly-cache" }
poly-catalog = { path = "crates/poly-catalog" }
poly-cli = { path = "crates/poly-cli" }
poly-config = { path = "crates/poly-config" }
poly-core = { path = "crates/poly-core" }
poly-hooks = { path = "crates/poly-hooks" }
poly-mcp = { path = "crates/poly-mcp" }
pprof = "0.15.0"
predicates = "3"
pretty_assertions = "1.4.1"
pretty_graphql = "0.2.3"
pretty_yaml = "0.6"
quick-xml = "0.41"
rand = "0.10.2"
rayon = "1"
regex = "1"
rmcp = { version = "2.1.0", features = ["schemars"] }
rubyfmt = { git = "https://github.com/fables-tales/rubyfmt", rev = "d3d433caffa02446a295f60fd8b727099bebbb97", default-features = false }
ruff_db = { git = "https://github.com/astral-sh/ruff", rev = "e6f1513d78c99bc8af1fcc3bc2a9a81e25cb3c2d" }
ruff_diagnostics = { git = "https://github.com/astral-sh/ruff", rev = "e6f1513d78c99bc8af1fcc3bc2a9a81e25cb3c2d" }
ruff_formatter = { git = "https://github.com/astral-sh/ruff", rev = "e6f1513d78c99bc8af1fcc3bc2a9a81e25cb3c2d" }
ruff_linter = { git = "https://github.com/astral-sh/ruff", rev = "e6f1513d78c99bc8af1fcc3bc2a9a81e25cb3c2d" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", rev = "e6f1513d78c99bc8af1fcc3bc2a9a81e25cb3c2d" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff", rev = "e6f1513d78c99bc8af1fcc3bc2a9a81e25cb3c2d" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", rev = "e6f1513d78c99bc8af1fcc3bc2a9a81e25cb3c2d" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", rev = "e6f1513d78c99bc8af1fcc3bc2a9a81e25cb3c2d" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", rev = "e6f1513d78c99bc8af1fcc3bc2a9a81e25cb3c2d" }
rumdl = { version = "0.2", default-features = false }
rustc-hash = "2.1.3"
rustix = { version = "1.1.4", features = ["pty", "process", "fs", "termios"] }
same-file = "1.0.6"
saphyr = "0.0.9"
schemars = "1.2.1"
seahash = "4.1.0"
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-saphyr = { version = "0.0.29", default-features = false, features = ["deserialize", "serialize"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_stacker = "0.1.14"
serde_toon_format = "0.1"
shlex = "2.0.1"
similar = "3.1.1"
sqruff-lib = "0.39"
sqruff-lib-core = "0.39"
strum = { version = "0.28.0", features = ["derive"] }
taplo = "0.14"
target-lexicon = "0.13.5"
tempfile = "3"
textwrap = "0.16.2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
toml = "1.1"
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tree-sitter = "0.26"
tree-sitter-language-pack = "1.12"
typos = "0.10"
typos-dict = "0.13"
uncomment = "3.2"
unicase = "2"
unicode-width = { version = "0.2.2", default-features = false }
walkdir = "2.5.0"
which = "8.0.4"

[profile.release]
lto = "thin"
codegen-units = 1
