[package]
name = "gitfluff"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
description = "Commit message linting tool with presets, custom formats, and cleanup automation."
license = "MIT"
repository = "https://github.com/Goldziher/gitfluff"
homepage = "https://github.com/Goldziher/gitfluff"

[lib]
name = "gitfluff"
path = "src/lib.rs"

[[bin]]
name = "gitfluff"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
regex.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
