[package]
name = "poly-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified result-cache (blake3, namespaced, file-set digest) for polylint, polyfmt, and poly hooks"
publish = false

[lib]
name = "poly_cache"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unsafe_code = "forbid"
