[package]
name = "poly-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Universal, zero-dependency linter & formatter: a single `poly` CLI (poly lint / poly fmt) that handles every language in-process, no per-language toolchains required."
keywords = ["linter", "formatter", "polyglot", "universal", "lint"]
categories = ["development-tools", "command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/poly-{ version }-{ target }.{ archive-suffix }"
bin-dir = "."

[lib]
name = "poly_cli"
path = "src/lib.rs"

[[bin]]
name = "poly"
path = "src/main.rs"

[dependencies]
aho-corasick.workspace = true
anyhow.workspace = true
clap.workspace = true
console.workspace = true
fs2.workspace = true
gitfluff.workspace = true
json5.workspace = true
owo-colors.workspace = true
poly-cache.workspace = true
poly-catalog.workspace = true
poly-config.workspace = true
poly-core.workspace = true
poly-hooks.workspace = true
poly-mcp.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
which.workspace = true

[dev-dependencies]
insta.workspace = true
