[package]
name = "poly-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified poly.toml configuration schema shared by poly lint, poly fmt, poly hooks, and poly commit"
publish = false

[lib]
name = "poly_config"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
poly-catalog.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
