[package]
name = "poly-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Execution building blocks for poly's native git hook runner (sync, no tokio)."

[dependencies]
anstyle-query = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
dunce = { workspace = true }
fs-err = { workspace = true }
globset = { workspace = true }
owo-colors = { workspace = true }
phf = { workspace = true }
poly-cache = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
shlex = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }
which = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
rustix = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
poly-cache = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
collapsible_else_if = "allow"
collapsible_if = "allow"
if_not_else = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
