[package]
name = "polyfmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Universal, zero-dependency formatter: one binary that formats every language in-process, no per-language toolchains required."
keywords = ["formatter", "format", "polyglot", "universal", "linter"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "polyfmt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
owo-colors.workspace = true
polylint-core.workspace = true
