[package]
name = "polyfmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Universal, zero-dependency formatter: one binary that formats every language in-process, no per-language toolchains required."
keywords = ["formatter", "format", "polyglot", "universal", "linter"]
categories = ["development-tools", "command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/poly-{ version }-{ target }.{ archive-suffix }"
bin-dir = "."

[[bin]]
name = "polyfmt"
path = "src/main.rs"

[dependencies]
clap.workspace = true
poly-cli.workspace = true
